--- a/VecinosUY.Data/VecinosUY.Data.csproj
+++ b/VecinosUY.Data/VecinosUY.Data.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entities\Property.cs" />
+    <Compile Include="Entities\Announcement.cs" />
     <Compile Include="Entities\UserDTO.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
