servicios de anuncios y angular de anuncios y estados de cuenta

--- a/VecinosUY.Data/VecinosUY.Data.csproj
+++ b/VecinosUY.Data/VecinosUY.Data.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Entities\Property.cs" />
     <Compile Include="Entities\Service.cs" />
     <Compile Include="Entities\Announcement.cs" />
+    <Compile Include="Entities\AccountState.cs" />
     <Compile Include="Entities\UserDTO.cs" />
     <Compile Include="Entities\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
