--- a/VecinosUY.Web.Api/VecinosUY.Web.Api.csproj
+++ b/VecinosUY.Web.Api/VecinosUY.Web.Api.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AccountStateController.cs" />
     <Compile Include="Controllers\BookingsController.cs" />
     <Compile Include="Controllers\BuildingsController.cs" />
     <Compile Include="Controllers\ServicesController.cs" />
