Se crea la entidad Contaco. Al crear un usuario el mismo es automaticamente registrado como contacto

--- a/VecinosUY.Logic/VecinosUY.Logic.csproj
+++ b/VecinosUY.Logic/VecinosUY.Logic.csproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ContactValidator.cs" />
+    <Compile Include="IContactValidator.cs" />
     <Compile Include="IVoteValidator.cs" />
     <Compile Include="IMeetingValidator.cs" />
     <Compile Include="VoteValidator.cs" />
