--- a/VecinosUY.Data/VecinosUY.Data.csproj
+++ b/VecinosUY.Data/VecinosUY.Data.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entities\Contact.cs" />
     <Compile Include="Entities\Vote.cs" />
     <Compile Include="Entities\Meeting.cs" />
     <Compile Include="Entities\Booking.cs" />
