--- a/App.VecinosUY/app/src/main/AndroidManifest.xml
+++ b/App.VecinosUY/app/src/main/AndroidManifest.xml
@@ -63,6 +63,7 @@
         <activity android:name=".AnnouncementFormActivity" />
         <activity android:name=".AccountStateActivity" />
         <activity android:name=".NewMeetingActivity"></activity>
+        <activity android:name=".NewVoteActivity"></activity>
         <activity android:name=".MeetingActivity"></activity>
         <activity android:name=".VoteActivity"></activity>
     </application>
