backend de bookings y servicios con validaciones

--- a/VecinosUY.Exceptions/VecinosUY.Exceptions.csproj
+++ b/VecinosUY.Exceptions/VecinosUY.Exceptions.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="NotAdminException.cs" />
+    <Compile Include="NotValidBookingException.cs" />
     <Compile Include="NotExistException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
