reservas desde android

--- a/App.VecinosUY/app/src/main/AndroidManifest.xml
+++ b/App.VecinosUY/app/src/main/AndroidManifest.xml
@@ -66,6 +66,8 @@
         <activity android:name=".NewVoteActivity"></activity>
         <activity android:name=".MeetingActivity"></activity>
         <activity android:name=".VoteActivity"></activity>
+        <activity android:name=".NewBookActivity"></activity>
+        <activity android:name=".BookActivity"></activity>
     </application>
 
 </manifest>
