--- a/App.VecinosUY/app/src/main/AndroidManifest.xml
+++ b/App.VecinosUY/app/src/main/AndroidManifest.xml
@@ -62,12 +62,14 @@
         <activity android:name=".AnnouncementActivity" />
         <activity android:name=".AnnouncementFormActivity" />
         <activity android:name=".AccountStateActivity" />
+        <activity android:name=".ContactActivity"/>
         <activity android:name=".NewMeetingActivity"></activity>
         <activity android:name=".NewVoteActivity"></activity>
         <activity android:name=".MeetingActivity"></activity>
         <activity android:name=".VoteActivity"></activity>
         <activity android:name=".NewBookActivity"></activity>
         <activity android:name=".BookActivity"></activity>
+
     </application>
 
 </manifest>
